<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Speak For Me</string>
    <string name="home_welcome">Welcome To Speak For Me</string>
    <string name="action_settings">Settings</string>
    <string name="home_caption">i will read anything for u...!!</string>
    <string name="home_btn_smsreader">SMS Reader</string>
    <string name="home_btn_textreader">Text Reader</string>
    <string name="title_activity_smsreader">SMS Reader</string>
    <string name="title_clipboard_manager">Clip Board Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="sms_qn">Do you want me to Read your Sms ?</string>
    <string name="sms_caption">I Respect Your Privacy. I am just a Machine</string>
    <string name="title_activity_text">TextActivity</string>
    <string name="txt_welcome">Enter Some text to Speak...!!!</string>
    <string name="title_activity_smsbroadcaster">SMS Broadcaster</string>
    <string name="title_activity_smsreceiver">SMS Receiver</string>
    <string name="clipboard_message">Do you want me to read the clipboard content when copied?</string>
    <string name="contact_me">For any queries contact @saiprasenthati (saiprasenthati@gmail.com)</string>
    <string name="cm_btn">Clip Board Reader</string>
    <string name="exit_btn">Exit</string>
    <string name="btn_stop">Stop</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="title_activity_clip_board">ClipBoard</string>

</resources>
